objects/Survey_Response__c.object
<CustomObject>
    <fields>
        <fullName>Answered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Negative__c</fullName>
        <formula>IF(Passed__c = FALSE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negative</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Positive__c</fullName>
        <formula>IF(Passed__c = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Positive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Response</label>
    <nameField>
        <displayFormat>Res-{0000000}</displayFormat>
        <label>Id Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>